# minecraft_world

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: cargo_test.yml
assets/world/: env_meta.txt  map.sqlite  mod_storage.sqlite  players.sqlite
assets/world_luanti_5.10/: auth.sqlite  map_meta.txt  world.mt
assets/world_minecraft_1.21.4/entities/: r.0.-1.mca
assets/world_minecraft_1.21.4/poi/: r.0.-1.mca
assets/world_minecraft_java_1.21.4/: level.dat_old
assets/world_minecraft_java_1.21.4/advancements/: 76bc3adb-7add-46fd-82c3-d9595dc5af7d.json
assets/world_minecraft_java_1.21.4/entities/: r.-1.-1.mca  r.0.0.mca
assets/world_minecraft_java_1.21.4/playerdata/: 76bc3adb-7add-46fd-82c3-d9595dc5af7d.dat_old
assets/world_minecraft_java_1.21.4/poi/: r.-1.-1.mca
assets/world_minecraft_java_1.21.4/region/: r.-1.-1.mca  r.-1.0.mca  r.0.0.mca
assets/world_minecraft_java_1.21.4/stats/: 76bc3adb-7add-46fd-82c3-d9595dc5af7d.json
src/: auth.rs  backend.rs  lib.rs  types.rs  world.rs
src/backend/: luanti.rs  memory.rs
src/backend/luanti/: auth.rs  file_format.rs  map.rs  world.rs
src/backend/luanti/block_serialization/: mod.rs  v29.rs
tests/: luanti.rs
