[package]
name = "minecraft_world"
description = "A library for reading, writing, abstracting and manipulating Minecraft and Luanti (aka Minetest) worlds."
license = "MIT"
version = "0.0.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }

[features]
minecraft_anvil = []
# Engines that Luanti could use to store world data.
luanti_sqlite = []
default = ["luanti_sqlite"]