[package]
name = "minecraft_world"
description = "A library for reading, writing, abstracting and manipulating Minecraft and Luanti (aka Minetest) worlds."
license = "MIT"
version = "0.0.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
fastnbt = { version = "2.5.0", optional = true }
serde = { version = "1.0", features = ["derive"]}
flate2 = "1.0.35" 

[features]
big_coordinates = []
# Backends
minecraft_java_anvil = [ "fastnbt" ]
# Engines that Luanti could use to store world data.
luanti_sqlite = [ "dep:rusqlite" ]
default = ["minecraft_java_anvil", "luanti_sqlite"]